--- a/src/app.scss
+++ b/src/app.scss
@@ -79,18 +79,18 @@ $theme-colors-light: (
 @import 'bootstrap/scss/popover';
 @import './global-styles/card';
 @import './global-styles/icons';
-@import './repo/tooltips';
+@import './shared/repo/tooltips';
 @import './highlight';
 @import './options';
-@import './tree/tree';
-@import './tree/repoRevSidebar';
-@import './tree/resizable';
-@import './components/alerts';
-@import './components/symbols';
-@import './components/codeIntelStatusIndicator';
-@import './components/CodeViewToolbar.scss';
+@import './shared/tree/tree';
+@import './shared/tree/repoRevSidebar';
+@import './shared/tree/resizable';
+@import './shared/components/alerts';
+@import './shared/components/symbols';
+@import './shared/components/codeIntelStatusIndicator';
+@import './shared/components/CodeViewToolbar.scss';
 @import '@sourcegraph/codeintellify/lib/HoverOverlay.scss';
-@import '../libs/code_intelligence/HoverOverlay.scss';
+@import './libs/code_intelligence/HoverOverlay.scss';
 @import '@sourcegraph/react-loading-spinner/lib/LoadingSpinner.css';
 @import './extensions-client-common';
 
