--- a/src/app.scss
+++ b/src/app.scss
@@ -82,6 +82,7 @@ $theme-colors-light: (
 @import './shared/repo/tooltips';
 @import './highlight';
 @import './options';
+@import './libs/options/styles.scss';
 @import './shared/tree/tree';
 @import './shared/tree/repoRevSidebar';
 @import './shared/tree/resizable';
@@ -89,6 +90,7 @@ $theme-colors-light: (
 @import './shared/components/symbols';
 @import './shared/components/codeIntelStatusIndicator';
 @import './shared/components/CodeViewToolbar.scss';
+@import './shared/components/JSONEditor';
 @import '@sourcegraph/codeintellify/lib/HoverOverlay.scss';
 @import './libs/code_intelligence/HoverOverlay.scss';
 @import '@sourcegraph/react-loading-spinner/lib/LoadingSpinner.css';
