fix: sync z-index for github tree and hover overlay

--- a/src/libs/code_intelligence/HoverOverlay.scss
+++ b/src/libs/code_intelligence/HoverOverlay.scss
@@ -1,4 +1,5 @@
 @import '../gitlab/style.scss';
+@import '../../global-styles/variables.scss';
 
 .hover-overlay-mount__phabricator {
     .hover-overlay {
@@ -17,4 +18,8 @@
             }
         }
     }
+}
+
+.hover-overlay {
+    z-index: $default-z-index;
 }
