--- a/src/shared/tree/tree.scss
+++ b/src/shared/tree/tree.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: $default-z-index;
+    z-index: $default-z-index - 1;
     width: 100%;
     pointer-events: none;
     height: 100%;
